feat: 创建了3d模型

--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.0.2",
     "qs": "^6.11.0",
+    "three": "^0.162.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
